[project]
name = "scene-rewind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "gradio>=5.42.0",
    "imageio>=2.37.0",
    "langfuse>=3.2.3",
    "nest-asyncio>=1.6.0",
    "openai>=1.99.6",
    "openai-agents>=0.2.5",
    "pydantic>=2.11.7",
    "pydantic-ai[logfire]>=0.6.2",
    "replicate>=1.0.7",
    "serpapi>=0.1.5",
]
